---------------------------------------------------------------------------------------------------
Version: 5.1.5
Date: ????
  Features:
    - The gui can be opened by right-clicking a Module Inserter
    - Added hotkey to toggle the gui (Default: Ctrl + I)
    - Added mod setting to hide the button in the top left corner
---------------------------------------------------------------------------------------------------
Version: 5.1.4
Date: 19. 08. 2020
  Bugfixes:
    - Fixed error when using ModuleInserter with an empty configuration
---------------------------------------------------------------------------------------------------
Version: 5.1.3
Date: 16. 08. 2020
  Bugfixes:
    - Fixed some errors when updating from old versions
---------------------------------------------------------------------------------------------------
Version: 5.1.2
Date: 15. 08. 2020
  Bugfixes:
    - Added missing migrations for older versions
---------------------------------------------------------------------------------------------------
Version: 5.1.1
Date: 11. 08. 2020
  Bugfixes:
    - Fixed error with latest version of flib
---------------------------------------------------------------------------------------------------
Version: 5.1.0
Date: 28. 07. 2020
  Features:
    - You can now configure the same machine multiple times: If the first configuration can't be inserted (e.g. due to productivity not being allows),
      ModuleInserter will try the next one
    - Import/Export for configurations. They are a blueprint/blueprint book, so they can be stored in the blueprint library
    - Added a mod setting to fill all empty slots when selecting the first module for a machine (Should help with modded machines that have a lot of module slots)
  Changes:
    - Updated the gui to be draggable and look more like the vanilla gui
    - Module restrictions are now checked for every entity, not only beacons
    - Allow inserting modules into assemblers without a recipe